# cffi_magic

./: .gitignore  LICENSE  flit.ini  pyproject.toml  readme.md
cffi_magic/: __init__.py
