[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "cffi_magic"
author = "Matthias Bussonnier"
requires = ["cffi"]
author-email = "bussonniermatthias@gmail.com"
home-page = "https://github.com/Carreau/cffi_magic"
classifiers = ["License :: OSI Approved :: MIT License"]
description-file = "readme.md"

